--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -191,16 +191,16 @@
             </form>
             <ul class="newsletter-follow">
               <li>
-                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a routerLink=""><i class="fab fa-facebook"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a routerLink=""><i class="fab fa-twitter"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a routerLink=""><i class="fab fa-instagram"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-pinterest"></i></a>
+                <a routerLink=""><i class="fab fa-pinterest"></i></a>
               </li>
             </ul>
           </div>
