--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -41,7 +41,7 @@
         <div class="col-md-3">
           <div class="header-logo">
             <a routerLink="/"  class="logo">
-              <!-- <img src="../../../assets/img/logo.png" alt=""> --> <i class="fa-solid fa-home"></i>   Jurassic Treasure
+              <!-- <img src="../../../assets/img/logo.png" alt=""> --> <i class="fa-solid fa-home"></i>   Jurassic Treasure Tahiri
             </a>
           </div>
         </div>
