font-awsome integration

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -12,7 +12,7 @@
           </div>
           <div class="shop-body">
             <h3>Top<br>Fossils</h3>
-            <a routerLink="/fossils" class="cta-btn">See more! <i class="fa fa-arrow-circle-right"></i></a>
+            <a routerLink="/fossils" class="cta-btn">See more!! <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
       </div>
