updates on header

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -40,8 +40,9 @@
         <!-- LOGO -->
         <div class="col-md-3">
           <div class="header-logo">
-            <a routerLink="/"  class="logo">
-              <!-- <img src="../../../assets/img/logo.png" alt=""> --> <i class="fa-solid fa-home"></i>   Jurassic Treasure Tahiri
+            <a routerLink="/" class="logo">
+              <!-- <img src="../../../assets/img/logo.png" alt=""> --> <i class="fa-solid fa-home"></i> Jurassic
+              Treasure Tahiri
             </a>
           </div>
         </div>
@@ -78,7 +79,8 @@
 
             <!-- Cart -->
             <div class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-expanded="true" style="cursor: pointer;">
+              <a class="dropdown-toggle" data-toggle="dropdown" id="dropdownMenuButton" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false" aria-expanded="true" style="cursor: pointer;">
                 <i class="fa fa-shopping-cart"></i>
                 <span>Your Cart</span>
                 <div class="qty">20</div>
@@ -87,7 +89,7 @@
                 <div class="cart-list">
                   <div class="product-widget">
                     <div class="product-img">
-                      <img src="" alt="" width="20px">  
+                      <img src="" alt="" width="20px">
                     </div>
                     <div class="product-body">
                       <h3 class="product-name"><a href="#">Product name Goes Here</a></h3>
@@ -95,9 +97,6 @@
                     </div>
                     <button class="delete"><i class="fa fa-close"></i></button>
                   </div>
-                  
-
-
                 </div>
                 <div class="cart-summary">
                   <small> Item(s) selected</small>
@@ -137,13 +136,10 @@
   <div class="container">
     <!-- responsive-nav -->
     <div id="responsive-nav">
-      <!-- NAV --> 
-
-
-
+      <!-- NAV -->
       <ul class="main-nav nav py-2">
-        <li><a routerLinkActive="active"  class="text-muted" routerLink='/'>Home</a></li>
-        <li><a routerLinkActive="active"  class="text-muted" routerLink='/newarrivals'>New Arrivals</a></li>
+        <li><a routerLinkActive="active" class="text-muted" routerLink='/'>Home</a></li>
+        <li><a routerLinkActive="active" class="text-muted" routerLink='/newarrivals'>New Arrivals</a></li>
         <li><a routerLinkActive="active" class="text-muted" routerLink="/fossils">Fossils</a></li>
         <li><a routerLinkActive="active" class="text-muted" routerLink="/minerals">Minerals</a></li>
         <li><a routerLinkActive="active" class="text-muted" routerLink="/meteorites">Meteorites</a></li>
@@ -153,7 +149,6 @@
       </ul>
       <!-- /NAV -->
     </div>
-
     <!-- /responsive-nav -->
   </div>
   <!-- /container -->
