--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
       <div class="col-md-4 col-xs-6">
         <div class="shop">
           <div class="shop-img">
-            <img src="./../../../assets/img/shop01.png" alt="">
+            <img src="./../../../assets/img/topfossils.jpg" alt="">
           </div>
           <div class="shop-body">
             <h3>Top<br>Fossils</h3>
@@ -22,7 +22,7 @@
       <div class="col-md-4 col-xs-6">
         <div class="shop">
           <div class="shop-img">
-            <img src="./../../../assets/img/shop03.png" alt="">
+            <img src="./../../../assets/img/topminerals.jpg" alt="">
           </div>
           <div class="shop-body">
             <h3>Top<br>Minerals</h3>
@@ -36,7 +36,7 @@
       <div class="col-md-4 col-xs-6">
         <div class="shop">
           <div class="shop-img">
-            <img src="./../../../assets/img/shop02.png" alt="">
+            <img src="./../../../assets/img/topmeteorites.jpg" alt="">
           </div>
           <div class="shop-body">
             <h3>Top<br>Meteorites</h3>
@@ -130,7 +130,7 @@
   <!-- /SECTION -->
 
   <!-- HOT DEAL SECTION -->
-  <div id="hot-deal" class="section">
+  <div id="hot-deal" style="background-image:url('../../../assets/img/saidcover.png');" class="section">
     <!-- container -->
     <div class="container">
       <!-- row -->
@@ -163,8 +163,8 @@
                 </div>
               </li>
             </ul>
-            <h2 class="text-uppercase">hot deal this week</h2>
-            <p>New Collection Up to 50% OFF</p>
+            <h2 class="text-uppercase" style="color: white;">hot deal this week</h2>
+            <p style="color: white;">New Collection Up to 50% OFF</p>
             <a class="primary-btn cta-btn" href="#">See more!</a>
           </div>
         </div>
