changes on home page

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -6,13 +6,13 @@
     <div class="row">
       <!-- shop -->
       <div class="col-md-4 col-xs-6">
-        <div class="shop">
+        <div routerLink="/fossils" class="shop">
           <div class="shop-img">
             <img src="./../../../assets/img/topfossils.jpg" alt="">
           </div>
           <div class="shop-body">
             <h3>Top<br>Fossils</h3>
-            <a routerLink="/fossils" class="cta-btn">See more!! <i class="fa fa-arrow-circle-right"></i></a>
+            <a  class="cta-btn">See more!! <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
       </div>
@@ -20,13 +20,13 @@
 
       <!-- shop -->
       <div class="col-md-4 col-xs-6">
-        <div class="shop">
+        <div routerLink="/minerals" class="shop">
           <div class="shop-img">
             <img src="./../../../assets/img/topminerals.jpg" alt="">
           </div>
           <div class="shop-body">
             <h3>Top<br>Minerals</h3>
-            <a routerLink="/minerals" class="cta-btn">See more! <i class="fa fa-arrow-circle-right"></i></a>
+            <a  class="cta-btn">See more! <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
       </div>
@@ -34,13 +34,13 @@
 
       <!-- shop -->
       <div class="col-md-4 col-xs-6">
-        <div class="shop">
+        <div routerLink="/meteorites" class="shop">
           <div class="shop-img">
             <img src="./../../../assets/img/topmeteorites.jpg" alt="">
           </div>
           <div class="shop-body">
             <h3>Top<br>Meteorites</h3>
-            <a routerLink="/meteorites" class="cta-btn">See more! <i class="fa fa-arrow-circle-right"></i></a>
+            <a  class="cta-btn">See more! <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
       </div>
