--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -41,8 +41,8 @@
         <div class="col-md-3">
           <div class="header-logo">
             <a routerLink="/" class="logo">
-              <!-- <img src="../../../assets/img/logo.png" alt=""> --> <i class="fa-solid fa-home"></i> Jurassic
-              Treasure Tahiri
+              <img src="../../../assets/img/logoo.png" alt=""> 
+              <!-- <i class="fa-solid fa-home"></i> Jurassic Treasure Tahiri -->
             </a>
           </div>
         </div>
