--- a/frontend/src/app/components/faq/faq.component.html
+++ b/frontend/src/app/components/faq/faq.component.html
@@ -11,60 +11,97 @@
   
     <div class="row">
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="far fa-paper-plane text-primary pe-2"></i> A simple
-          question?</h6>
+        <h6 class="mb-3 text-primary"><i class="fas fa-gem fa-4x text-primary pe-2"></i> What products do you offer in your online store?</h6>
         <p>
-          <strong><u>Absolutely!</u></strong> We work with top payment companies which guarantees
-          your
-          safety and
-          security. All billing information is stored on our payment processing partner.
+          We specialize in providing a diverse range of fossils, meteorites, and minerals.
+           Our collection includes rare specimens from various geological eras and locations.
         </p>
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-pen-alt text-primary pe-2"></i> A question
-          that
-          is longer then the previous one?</h6>
+        <h6 class="mb-3 text-primary"><i class="fas fa-certificate fa-4x text-primary pe-2"></i>Are your fossils, meteorites, and minerals authentic?</h6>
         <p>
-          <strong><u>Yes, it is possible!</u></strong> You can cancel your subscription anytime in
-          your
-          account. Once the subscription is
-          cancelled, you will not be charged next month.
+          <strong><u>Absolutely!</u></strong> 
+           We take pride in offering only genuine and authenticated items.
+           Each product is thoroughly examined by experts to ensure its authenticity.
         </p>
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-user text-primary pe-2"></i> A simple
-          question?
+        <h6 class="mb-3 text-primary"><i class="fas fa-globe-americas fa-4x text-primary pe-2"></i> 
+          Do you provide information about the origin of the specimens?
         </h6>
         <p>
-          Currently, we only offer monthly subscription. You can upgrade or cancel your monthly
-          account at any time with no further obligation.
+          Yes, we strive to provide detailed information about the origin, geological significance, 
+          and age of each fossil, meteorite, and mineral. You can find this information on the product pages.
         </p>
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-rocket text-primary pe-2"></i> A simple
-          question?
+        <h6 class="mb-3 text-primary"><i class="fas fa-box fa-4x text-primary pe-2"></i> 
+          How are the items packaged for shipping?
         </h6>
         <p>
-          Yes. Go to the billing section of your dashboard and update your payment information.
+          We take great care in packaging our items to ensure their safe delivery. 
+          Fossils, meteorites, and minerals are securely wrapped and cushioned to prevent any damage during transit.
         </p>
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-home text-primary pe-2"></i> A simple
-          question?
+        <h6 class="mb-3 text-primary"><i class="fas fa-credit-card fa-4x text-primary pe-2"></i> What payment methods do you accept?
         </h6>
-        <p><strong><u>Unfortunately no</u>.</strong> We do not issue full or partial refunds for any
-          reason.</p>
+        <p>We accept major credit cards, debit cards, and PayPal for a secure and convenient 
+          shopping experience.</p>
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-book-open text-primary pe-2"></i> Another
-          question that is longer than usual</h6>
+        <h6 class="mb-3 text-primary"><i class="fas fa-globe fa-4x text-primary pe-2"></i> Do you offer international shipping?</h6>
         <p>
-          Of course! We’re happy to offer a free plan to anyone who wants to try our service.
+          Yes, we provide international shipping. Shipping costs and delivery times may vary depending on the destination.
+           Please check our shipping information for more details.
+        </p>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h6 class="mb-3 text-primary"><i class="fas fa-undo fa-4x text-primary pe-2"></i> What is your return policy?</h6>
+        <p>
+          We have a hassle-free return policy.
+           If you are not satisfied with your purchase, you can return the item within 10 days of receiving it.
+           Please review our Returns and Exchanges page for more details.
+        </p>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h6 class="mb-3 text-primary"><i class="fas fa-truck fa-4x text-primary pe-2"></i> How can I track my order?</h6>
+        <p>
+          Once your order is shipped, you will receive a confirmation email with a tracking number.
+           You can use this number to track your package through our website or the shipping carrier's website.
+        </p>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h6 class="mb-3 text-primary"><i class="fas fa-graduation-cap fa-4x text-primary pe-2"></i> Are your products suitable for educational purposes?</h6>
+        <p>
+          Yes, many of our items are excellent for educational purposes. 
+          Contact us for information about educational discounts or special requests for educational institutions.
+        </p>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h6 class="mb-3 text-primary"><i class="fas fa-users fa-4x text-primary pe-2"></i> Do you offer wholesale pricing for resellers?</h6>
+        <p>
+          Yes, we do offer wholesale pricing for qualified resellers.
+           Please reach out to our Wholesale Team for more information.
+        </p>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h6 class="mb-3 text-primary"><i class="fas fa-envelope fa-4x text-primary pe-2"></i> How can I contact your customer support?</h6>
+        <p>
+          For any questions or concerns,
+           you can reach our customer support team via our Contact Us page.
+        </p>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h6 class="mb-3 text-primary"><i class="fas fa-store fa-4x text-primary pe-2"></i> Do you have a physical store I can visit?</h6>
+        <p>
+          Currently, we operate exclusively online. However, we strive to provide a comprehensive online shopping 
+          experience with detailed product information and excellent customer service.
         </p>
       </div>
     </div>
