--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -83,24 +83,24 @@
                 aria-haspopup="true" aria-expanded="false" aria-expanded="true" style="cursor: pointer;">
                 <i class="fa fa-shopping-cart"></i>
                 <span>Your Cart</span>
-                <div class="qty">20</div>
+                <div class="qty">{{this.cartData.data[0].numInCart !== 0 ? this.cartData.data.length : 0 }}</div>
               </a>
               <div class="cart-dropdown" aria-labelledby="dropdownMenuButton">
-                <div class="cart-list">
-                  <div class="product-widget">
+                <div class="cart-list" *ngIf="cartData.data[0].numInCart !==0">
+                  <div class="product-widget" *ngFor="let c of cartData.data ; let i=index">
                     <div class="product-img">
-                      <img src="" alt="" width="20px">
+                      <img [src]="c.product.image" [alt]="c.product.Name" width="20px">
                     </div>
                     <div class="product-body">
-                      <h3 class="product-name"><a href="#">Product name Goes Here</a></h3>
-                      <h4 class="product-price"><span class="qty"> x </span>{{ 0 | currency}}</h4>
+                      <h3 class="product-name"><a href="#">{{c.product.Name}}</a></h3>
+                      <h4 class="product-price"><span class="qty">  </span>{{ c.numInCart}} x {{c.product.price | currency}} =   {{c.numInCart*c.product.price | currency}}  </h4>
                     </div>
-                    <button class="delete"><i class="fa fa-close"></i></button>
+                    <button class="delete" (click)="this.carteService.deleteProductFromCart(i)"><i class="fa fa-close"></i></button>
                   </div>
                 </div>
                 <div class="cart-summary">
-                  <small> Item(s) selected</small>
-                  <h5>TOTAL : {{ 0 | currency}} </h5>
+                  <small> {{this.cartData.data[0].numInCart !== 0 ? this.cartData.data.length : 0 }} Item(s) selected</small>
+                  <h5>TOTAL : {{cartTotal | currency}} </h5>
                 </div>
                 <div class="cart-btns">
                   <a routerLink="/cart">View Cart</a>
