--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -54,8 +54,8 @@
             <form>
               <select class="input-select">
                 <option value="0">All Categories</option>
-                <option value="1">Category 01</option>
-                <option value="2">Category 02</option>
+                <option value="1">Fossils</option>
+                <option value="2">Minerals</option>
               </select>
               <input class="input" placeholder="Search here">
               <button class="search-btn">Search</button>
