--- a/frontend/src/app/components/faq/faq.component.html
+++ b/frontend/src/app/components/faq/faq.component.html
@@ -1,17 +1,18 @@
-<h1 class=" text-center my-4 fw-bolder fs-1 text">Frequently asked questions</h1>
+<h1 class=" text-center my-4 fw-bolder fs-1 text    text-center mb-4 pb-2 text-primary fw-bold">Frequently asked questions</h1>
 
 <!--Section: FAQ-->
 <div class="container">
     
 <section>
-    <h3 class="text-center mb-4 pb-2 text-primary fw-bold">FAQ</h3>
+    <!-- <h3 class="text-center mb-4 pb-2 text-primary fw-bold">FAQ</h3> -->
     <p class="text-center mb-5">
       Find the answers for the most frequently asked questions below
     </p>
   
     <div class="row">
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-gem fa-4x text-primary pe-2"></i> What products do you offer in your online store?</h6>
+        <i class="fas fa-gem fa-4x text-primary pe-2 d-flex align-items-center justify-content-around my-4"></i>
+        <h6 class="mb-3 text-primary text-center"> What products do you offer in your online store?</h6>
         <p>
           We specialize in providing a diverse range of fossils, meteorites, and minerals.
            Our collection includes rare specimens from various geological eras and locations.
@@ -19,7 +20,8 @@
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-certificate fa-4x text-primary pe-2"></i>Are your fossils, meteorites, and minerals authentic?</h6>
+        <i class="fas fa-certificate fa-4x text-primary pe-2 d-flex align-items-center justify-content-around my-4"></i>
+        <h6 class="mb-3 text-primary text-center">Are your fossils, meteorites, and minerals authentic?</h6>
         <p>
           <strong><u>Absolutely!</u></strong> 
            We take pride in offering only genuine and authenticated items.
@@ -28,7 +30,7 @@
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-globe-americas fa-4x text-primary pe-2"></i> 
+        <h6 class="mb-3 text-primary text-center"><i class="fas fa-globe-americas fa-4x text-primary pe-2 d-flex align-items-center justify-content-around my-4"></i> 
           Do you provide information about the origin of the specimens?
         </h6>
         <p>
@@ -38,7 +40,7 @@
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-box fa-4x text-primary pe-2"></i> 
+        <h6 class="mb-3 text-primary text-center"><i class="fas fa-box fa-4x text-primary pe-2 d-flex align-items-center justify-content-around my-4"></i> 
           How are the items packaged for shipping?
         </h6>
         <p>
@@ -48,21 +50,21 @@
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-credit-card fa-4x text-primary pe-2"></i> What payment methods do you accept?
+        <h6 class="mb-3 text-primary text-center"><i class="fas fa-credit-card fa-4x text-primary pe-2 d-flex align-items-center justify-content-around my-4"></i> What payment methods do you accept?
         </h6>
         <p>We accept major credit cards, debit cards, and PayPal for a secure and convenient 
           shopping experience.</p>
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-globe fa-4x text-primary pe-2"></i> Do you offer international shipping?</h6>
+        <h6 class="mb-3 text-primary text-center"><i class="fas fa-globe fa-4x text-primary pe-2 d-flex align-items-center justify-content-around my-4"></i> Do you offer international shipping?</h6>
         <p>
           Yes, we provide international shipping. Shipping costs and delivery times may vary depending on the destination.
            Please check our shipping information for more details.
         </p>
       </div>
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-undo fa-4x text-primary pe-2"></i> What is your return policy?</h6>
+        <h6 class="mb-3 text-primary text-center"><i class="fas fa-undo fa-4x text-primary pe-2 d-flex align-items-center justify-content-around my-4"></i> What is your return policy?</h6>
         <p>
           We have a hassle-free return policy.
            If you are not satisfied with your purchase, you can return the item within 10 days of receiving it.
@@ -70,35 +72,35 @@
         </p>
       </div>
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-truck fa-4x text-primary pe-2"></i> How can I track my order?</h6>
+        <h6 class="mb-3 text-primary text-center"><i class="fas fa-truck fa-4x text-primary pe-2 d-flex align-items-center justify-content-around my-4"></i> How can I track my order?</h6>
         <p>
           Once your order is shipped, you will receive a confirmation email with a tracking number.
            You can use this number to track your package through our website or the shipping carrier's website.
         </p>
       </div>
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-graduation-cap fa-4x text-primary pe-2"></i> Are your products suitable for educational purposes?</h6>
+        <h6 class="mb-3 text-primary text-center"><i class="fas fa-graduation-cap fa-4x text-primary pe-2 d-flex align-items-center justify-content-around my-4"></i> Are your products suitable for educational purposes?</h6>
         <p>
           Yes, many of our items are excellent for educational purposes. 
           Contact us for information about educational discounts or special requests for educational institutions.
         </p>
       </div>
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-users fa-4x text-primary pe-2"></i> Do you offer wholesale pricing for resellers?</h6>
+        <h6 class="mb-3 text-primary text-center"><i class="fas fa-users fa-4x text-primary pe-2 d-flex align-items-center justify-content-around my-4"></i> Do you offer wholesale pricing for resellers?</h6>
         <p>
           Yes, we do offer wholesale pricing for qualified resellers.
            Please reach out to our Wholesale Team for more information.
         </p>
       </div>
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-envelope fa-4x text-primary pe-2"></i> How can I contact your customer support?</h6>
+        <h6 class="mb-3 text-primary text-center"><i class="fas fa-envelope fa-4x text-primary pe-2 d-flex align-items-center justify-content-around my-4"></i> How can I contact your customer support?</h6>
         <p>
           For any questions or concerns,
            you can reach our customer support team via our Contact Us page.
         </p>
       </div>
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-store fa-4x text-primary pe-2"></i> Do you have a physical store I can visit?</h6>
+        <h6 class="mb-3 text-primary text-center"><i class="fas fa-store fa-4x text-primary pe-2 d-flex align-items-center justify-content-around my-4"></i> Do you have a physical store I can visit?</h6>
         <p>
           Currently, we operate exclusively online. However, we strive to provide a comprehensive online shopping 
           experience with detailed product information and excellent customer service.
