--- a/frontend/src/app/components/cart/cart.component.html
+++ b/frontend/src/app/components/cart/cart.component.html
@@ -1,1 +1,87 @@
-<p>cart works!</p>
+<div class="container my-5 text-center">
+    <!-- quand la carte est vide -->
+
+    <div class="text-center my-5" *ngIf="cartData.data[0].numInCart == 0">
+        <h4>Your Cart is empty</h4>
+        <div class="card text-center">
+            <div class="card-body">
+                <!-- <h5 class="card-title">Your Card Is Empty</h5> -->
+                <p class="card-text">Go back to the shop page and add items to your card.</p>
+                <button routerLink="/home" class="btn btn-primary btn-lg mt-3">GO TO SHOP</button>
+            </div>
+        </div>
+    </div>
+
+    <ng-container *ngIf="cartData.data[0].numInCart !== 0">
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table">
+                    <thead class="table-dark">
+                        <tr class="text-center">
+                            <th>Image</th>
+                            <th>Title</th>
+                            <th>Price</th>
+                            <th>Quantity</th>
+                            <th>Subtotal</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let product of cartData.data , let i = index ">
+                            <td class="d-flex align-items-center justify-content-around">
+                                <span  class="text-danger mr-md-2" style="cursor: pointer;"> <i class="fa fa-trash"
+                                    (click)="carteService.deleteProductFromCart(product.product.id,true)"></i>
+                                </span>
+                                <img [src]="product.product.image" [alt]="product.product.Name" height="60px">
+                            </td>
+                            <td>
+                                <p>{{product.product.Name}}</p>
+                            </td>
+                            <td>
+                                <p>{{product.product.price | currency}}</p>
+                            </td>
+                            <td>
+                                <form>
+                                    <div class="value-button" id="decrease" (click)="changequantity(i,false)">
+                                        <i class="fa fa-minus"></i>
+                                    </div>
+                                    <input type="number" [value]="product.numInCart" readonly
+                                        [max]="product.product.quantity" id="number" >
+                                    <div class="value-button" id="increase" (click)="changequantity(i,true)">
+                                        <i class="fa fa-plus"></i>
+                                    </div>
+                                </form>
+                            </td>
+                            <td>
+                                <p>
+                                    {{carteService.calculateSubTotal(product.product.id) | currency}}
+                                </p>
+                            </td>
+                        </tr>
+                        <tr class="border-0">
+                            <td style="border: none;">
+
+                            </td>
+                            <td>
+
+                            </td>
+                            <td>
+
+                            </td>
+                            <td>
+                                TOTAL
+                            </td>
+                            <td>
+                                {{cartTotal | currency}}
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+    </ng-container>
+
+
+
+    <!-- quand la carte dispose des produits -->
+</div>
