--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -96,7 +96,7 @@
                         <h3 class="product-name"><a (click)="selectProduct(c.product.id)" >{{c.product.Name}}</a></h3>
                         <h4 class="product-price" (click)="selectProduct(c.product.id)"><span class="qty">  </span>{{ c.numInCart}} x {{c.product.price | currency}} =   {{c.numInCart*c.product.price | currency}}  </h4>
                       </div>
-                      <button class="delete" (click)="this.carteService.deleteProductFromCart(i)"><i class="fa fa-close"></i></button>
+                      <button class="delete" (click)="this.carteService.deleteProductFromCart(i,true)"><i class="fa fa-close"></i></button>
                     </div>
                   </div>
                  
