--- a/frontend/src/app/components/cart/cart.component.html
+++ b/frontend/src/app/components/cart/cart.component.html
@@ -76,6 +76,13 @@
                         </tr>
                     </tbody>
                 </table>
+
+            </div>
+            <div class="col-md-12 d-flex mb-5">
+                <div class="d-flex justify-content-between flex-sm-column flex-md-row w-100 ">
+                    <a routerLink="/checkout" class="btn btn-danger btn-lg order-1">checkout</a>
+                    <a routerLink="/" class="btn btn-success btn-lg order-0">Continue Shoping</a>
+                </div>
             </div>
         </div>
 
